# SpaceTerminal

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  isort.yml
spaceterminal/: agent.py  client.py  constants.py  contracts.py  jsonTree.py  main.py  space.py  style.css
tests/: test_agent.py  test_client.py
