[tool.poetry]
name = "spaceterminal"
version = "0.1.0"
description = "A SpaceTraders API terminal using Textual."
license = "MIT"
authors = ["Jason Hutson <110316760+HutsonJason@users.noreply.github.com>"]
repository = "https://github.com/HutsonJason/SpaceTerminal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.27.0"
requests = "^2.31.0"
requests-ratelimiter = "^0.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
textual = {extras = ["dev"], version = "^0.27.0"}
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"