[tool.poetry]
name = "spaceterminal"
version = "0.2.0"
description = "A SpaceTraders API terminal using Textual."
license = "MIT"
authors = ["Jason Hutson <110316760+HutsonJason@users.noreply.github.com>"]
repository = "https://github.com/HutsonJason/SpaceTerminal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.67.1"
requests = "^2.32.3"
requests-ratelimiter = "^0.6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"